--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^4.2.1",
     "element-ui": "^2.6.1",
+    "v-charts": "^1.19.0",
     "vue": "^2.6.6",
     "vuex": "^3.1.0"
   },
