--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.6.1",
     "v-charts": "^1.19.0",
     "vue": "^2.6.6",
+    "vue-lazyload": "^1.2.6",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
